# sheffield_hpc

./: .drone.yml  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  Dockerfile  FAQs.rst  Makefile  README.md  README.rst  activate_env.sh  bede.rst  citing.rst  cluster_specs.rst  conf.py  filestore.rst  get_newfloat.sty.sh  getting-started.rst  getting_started.rst  global.rst  glossary.rst  help.rst  iceberg-eol.rst  index.rst  jade.rst  jade2.rst  merge_upstream.sh  mfa-update-20-10-2021.rst  mfa-update-21-10-2021.rst  netlify.toml  oldsystems.rst  other-uk-hpc-resources.rst  pyproject.toml  requirements.txt  resource_costs.rst  rtd-root-redirect.html  setuptoolsrequirements.txt  tox.ini  troubleshooting.rst
_static/: iceberg.css
_templates/: layout.html  navbar.html  searchbox.html  singularity-stanage-redirect.html  softwaretoc.html
bessemer/: GPUComputingBessemer.rst  cluster_specs.rst  index.rst  slurm.rst
cheatsheets/: index.rst
decommissioned/: add_watermark_line.sh  iceberg.rst  index.rst
getting_started/: getting_started.rst  index.rst  sge-intro.rst
gpu/: GPUAccess.rst  GPUCommunity.rst  PGI_compiler.rst  Theano.rst  gpu_software.rst  index.rst  interactive_gpu.rst  nvidia_compiler.rst
hpc/: Choosing-appropriate-resources.rst  Sheffield HPC Cluster Storage Selection decision tree.drawio.xml  Sheffield-HPC-Cluster-Storage-Selection-decision-tree.drawio.xml  account.rst  accounts.rst  completed-aborted-jobs.rst  connecting.rst  connection.rst  deleting-jobs.rst  filestore.rst  flight-desktop.rst  freq.rst  getting-started.rst  hpcgateway.rst  (+14 more)
(+1786 files in other folders)
